gitops/tekton/tekton/tekton-ingressroute-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tekton-ingressroute-https
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`tekton.jed.local`)
    services:
    - name: tekton-dashboard
      port: 9097
  tls:
    secretName: tekton-ingress
